<?xml version="1.0"?>
<package format="3">
  <name>ros_kvh1750</name>
  <version>1.0.0</version>
  <description>KVH 1750 IMU Driver</description>

  <maintainer email="jpz@vt.edu">Jason Ziglar</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kvh1750</url> -->

  <author email="erichahn@vt.edu">Eric Hahn</author>
  <author email="jpz@vt.edu">Jason Ziglar</author>
  <author email="lakdant@gmail.com">Lakshitha Dantanarayana</author>

  <!--<test_depend>gtest</test_depend>-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>ament_cmake_auto</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
